[package]
name = "yakv"
version = "0.1.0"
authors = ["Devajit Asem <asem.devajit@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false
doctest = false

[[bin]]
name = "yakv-client"
path = "src/bin/yakv-client.rs"
test = false
doctest = false

[[bin]]
name = "yakv-server"
path = "src/bin/yakv-server.rs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0.110"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
