[package]
name = "kvs"
version = "0.1.0"
authors = ["Devajit Asem <asem.devajit@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
