[package]
name = "makv"
version = "0.4.0"
authors = ["Devajit Asem <asem.devajit@gmail.com>"]
description = "A multi-threaded key-value store"
edition = "2018"

[lib]
test = false
doctest = false

[[bin]]
name = "makv-client"
path = "src/bin/makv-client.rs"
test = false
doctest = false

[[bin]]
name = "makv-server"
path = "src/bin/makv-server.rs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0.110"
serde_json = "1.0"
slog = "2.5.2"
slog-term = "2.5.0"
sled = "0.31.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
