[package]
name = "yakv"
version = "0.1.0"
authors = ["Devajit Asem <asem.devajit@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false

[[bin]]
name = "yakv"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
